RE-36 Switching from EventConstant to langFile for BetterNPC, BetterMobs, BankerHelper BetterLock, NPCAPI